src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__for_statement_sint.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i8 }

@prg_instance = global %prg zeroinitializer

define void @prg(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %__ran_once_0 = alloca i8, align [filtered]
  store i8 0, ptr %__ran_once_0, align [filtered]
  %__is_incrementing_0 = alloca i8, align [filtered]
  store i8 0, ptr %__is_incrementing_0, align [filtered]
  %__is_last_0 = alloca i8, align [filtered]
  store i8 0, ptr %__is_last_0, align [filtered]
  store i8 3, ptr %x, align [filtered]
  store i8 1, ptr %__is_incrementing_0, align [filtered]
  br label %while_body

while_body:                                       ; preds = %continue11, %entry
  %load___ran_once_0 = load i8, ptr %__ran_once_0, align [filtered]
  %1 = icmp ne i8 %load___ran_once_0, 0
  br i1 %1, label %condition_body, label %continue1

continue:                                         ; preds = %condition_body22, %condition_body17, %condition_body9
  ret void

condition_body:                                   ; preds = %while_body
  %load___is_incrementing_0 = load i8, ptr %__is_incrementing_0, align [filtered]
  %2 = icmp ne i8 %load___is_incrementing_0, 0
  br i1 %2, label %condition_body3, label %else

continue1:                                        ; preds = %continue8, %while_body
  store i8 1, ptr %__ran_once_0, align [filtered]
  %load___is_incrementing_012 = load i8, ptr %__is_incrementing_0, align [filtered]
  %3 = icmp ne i8 %load___is_incrementing_012, 0
  br i1 %3, label %condition_body13, label %else10

condition_body3:                                  ; preds = %condition_body
  %load_x = load i8, ptr %x, align [filtered]
  %4 = sext i8 %load_x to i32
  %tmpVar = icmp sge i32 %4, 10
  %5 = zext i1 %tmpVar to i8
  %6 = icmp ne i8 %5, 0
  %7 = and i1 %6, true
  %8 = zext i1 %7 to i8
  store i8 %8, ptr %__is_last_0, align [filtered]
  br label %continue2

else:                                             ; preds = %condition_body
  %load_x4 = load i8, ptr %x, align [filtered]
  %9 = sext i8 %load_x4 to i32
  %tmpVar5 = icmp slt i32 %9, 9
  %10 = zext i1 %tmpVar5 to i8
  store i8 %10, ptr %__is_last_0, align [filtered]
  br label %continue2

continue2:                                        ; preds = %else, %condition_body3
  %load_x6 = load i8, ptr %x, align [filtered]
  %11 = sext i8 %load_x6 to i32
  %tmpVar7 = add i32 %11, 1
  %12 = trunc i32 %tmpVar7 to i8
  store i8 %12, ptr %x, align [filtered]
  %load___is_last_0 = load i8, ptr %__is_last_0, align [filtered]
  %13 = icmp ne i8 %load___is_last_0, 0
  br i1 %13, label %condition_body9, label %continue8

condition_body9:                                  ; preds = %continue2
  br label %continue

buffer_block:                                     ; No predecessors!
  br label %continue8

continue8:                                        ; preds = %buffer_block, %continue2
  br label %continue1

condition_body13:                                 ; preds = %continue1
  %load_x15 = load i8, ptr %x, align [filtered]
  %14 = sext i8 %load_x15 to i32
  %tmpVar16 = icmp sgt i32 %14, 10
  %15 = zext i1 %tmpVar16 to i8
  %16 = icmp ne i8 %15, 0
  br i1 %16, label %condition_body17, label %continue14

else10:                                           ; preds = %continue1
  %load_x20 = load i8, ptr %x, align [filtered]
  %17 = sext i8 %load_x20 to i32
  %tmpVar21 = icmp slt i32 %17, 10
  %18 = zext i1 %tmpVar21 to i8
  %19 = icmp ne i8 %18, 0
  br i1 %19, label %condition_body22, label %continue19

continue11:                                       ; preds = %continue19, %continue14
  %load_x24 = load i8, ptr %x, align [filtered]
  br label %while_body

condition_body17:                                 ; preds = %condition_body13
  br label %continue

buffer_block18:                                   ; No predecessors!
  br label %continue14

continue14:                                       ; preds = %buffer_block18, %condition_body13
  br label %continue11

condition_body22:                                 ; preds = %else10
  br label %continue

buffer_block23:                                   ; No predecessors!
  br label %continue19

continue19:                                       ; preds = %buffer_block23, %else10
  br label %continue11
}
