src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__for_statement_with_continue.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i32 }

@prg_instance = global %prg zeroinitializer

define void @prg(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %__ran_once_0 = alloca i8, align [filtered]
  store i8 0, ptr %__ran_once_0, align [filtered]
  %__is_incrementing_0 = alloca i8, align [filtered]
  store i8 0, ptr %__is_incrementing_0, align [filtered]
  %__is_last_0 = alloca i8, align [filtered]
  store i8 0, ptr %__is_last_0, align [filtered]
  store i32 3, ptr %x, align [filtered]
  store i8 1, ptr %__is_incrementing_0, align [filtered]
  br label %while_body

while_body:                                       ; preds = %buffer_block26, %continue11, %entry
  %load___ran_once_0 = load i8, ptr %__ran_once_0, align [filtered]
  %1 = icmp ne i8 %load___ran_once_0, 0
  br i1 %1, label %condition_body, label %continue1

continue:                                         ; preds = %condition_body22, %condition_body17, %condition_body9
  ret void

condition_body:                                   ; preds = %while_body
  %load___is_incrementing_0 = load i8, ptr %__is_incrementing_0, align [filtered]
  %2 = icmp ne i8 %load___is_incrementing_0, 0
  br i1 %2, label %condition_body3, label %else

continue1:                                        ; preds = %continue8, %while_body
  store i8 1, ptr %__ran_once_0, align [filtered]
  %load___is_incrementing_012 = load i8, ptr %__is_incrementing_0, align [filtered]
  %3 = icmp ne i8 %load___is_incrementing_012, 0
  br i1 %3, label %condition_body13, label %else10

condition_body3:                                  ; preds = %condition_body
  %load_x = load i32, ptr %x, align [filtered]
  %tmpVar = icmp sge i32 %load_x, 10
  %4 = zext i1 %tmpVar to i8
  %5 = icmp ne i8 %4, 0
  %6 = and i1 %5, true
  %7 = zext i1 %6 to i8
  store i8 %7, ptr %__is_last_0, align [filtered]
  br label %continue2

else:                                             ; preds = %condition_body
  %load_x4 = load i32, ptr %x, align [filtered]
  %tmpVar5 = icmp slt i32 %load_x4, 3
  %8 = zext i1 %tmpVar5 to i8
  store i8 %8, ptr %__is_last_0, align [filtered]
  br label %continue2

continue2:                                        ; preds = %else, %condition_body3
  %load_x6 = load i32, ptr %x, align [filtered]
  %tmpVar7 = add i32 %load_x6, 7
  store i32 %tmpVar7, ptr %x, align [filtered]
  %load___is_last_0 = load i8, ptr %__is_last_0, align [filtered]
  %9 = icmp ne i8 %load___is_last_0, 0
  br i1 %9, label %condition_body9, label %continue8

condition_body9:                                  ; preds = %continue2
  br label %continue

buffer_block:                                     ; No predecessors!
  br label %continue8

continue8:                                        ; preds = %buffer_block, %continue2
  br label %continue1

condition_body13:                                 ; preds = %continue1
  %load_x15 = load i32, ptr %x, align [filtered]
  %tmpVar16 = icmp sgt i32 %load_x15, 10
  %10 = zext i1 %tmpVar16 to i8
  %11 = icmp ne i8 %10, 0
  br i1 %11, label %condition_body17, label %continue14

else10:                                           ; preds = %continue1
  %load_x20 = load i32, ptr %x, align [filtered]
  %tmpVar21 = icmp slt i32 %load_x20, 10
  %12 = zext i1 %tmpVar21 to i8
  %13 = icmp ne i8 %12, 0
  br i1 %13, label %condition_body22, label %continue19

continue11:                                       ; preds = %continue19, %continue14
  %load_x24 = load i32, ptr %x, align [filtered]
  %tmpVar25 = add i32 %load_x24, 1
  store i32 %tmpVar25, ptr %x, align [filtered]
  br label %while_body

buffer_block26:                                   ; No predecessors!
  %load_x27 = load i32, ptr %x, align [filtered]
  %tmpVar28 = sub i32 %load_x27, 1
  store i32 %tmpVar28, ptr %x, align [filtered]
  br label %while_body

condition_body17:                                 ; preds = %condition_body13
  br label %continue

buffer_block18:                                   ; No predecessors!
  br label %continue14

continue14:                                       ; preds = %buffer_block18, %condition_body13
  br label %continue11

condition_body22:                                 ; preds = %else10
  br label %continue

buffer_block23:                                   ; No predecessors!
  br label %continue19

continue19:                                       ; preds = %buffer_block23, %else10
  br label %continue11
}
