src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__function_and_struct_with_same_names.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%FOO = type { i32 }

@__FOO__init = unnamed_addr constant %FOO zeroinitializer

define void @FOO(%FOO* %0, i32 %1) {
entry:
  %FOO = alloca %FOO*, align 8
  store %FOO* %0, %FOO** %FOO, align 8
  %bar = alloca i32, align 4
  store i32 %1, i32* %bar, align 4
  %deref = load %FOO*, %FOO** %FOO, align 8
  %2 = bitcast %FOO* %deref to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %2, i8* align 1 bitcast (%FOO* @__FOO__init to i8*), i64 ptrtoint (%FOO* getelementptr (%FOO, %FOO* null, i32 1) to i64), i1 false)
  ret void
}

; Function Attrs: argmemonly nofree nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #0

attributes #0 = { argmemonly nofree nounwind willreturn }

