src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__function_block_instance_call.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%foo = type { i16, i16 }
%prg = type { %foo }

@__foo__init = unnamed_addr constant %foo zeroinitializer
@prg_instance = global %prg zeroinitializer

define void @foo(%foo* %0) {
entry:
  %this = alloca %foo*, align [filtered]
  store %foo* %0, %foo** %this, align [filtered]
  %x = getelementptr inbounds %foo, %foo* %0, i32 0, i32 0
  %y = getelementptr inbounds %foo, %foo* %0, i32 0, i32 1
  ret void
}

define void @prg(%prg* %0) {
entry:
  %fb_inst = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  call void @foo(%foo* %fb_inst)
  ret void
}
