src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__function_block_qualified_instance_call.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%foo = type { %bar }
%bar = type {}
%prg = type { %foo }

@__foo__init = unnamed_addr constant %foo zeroinitializer
@__bar__init = unnamed_addr constant %bar zeroinitializer
@prg_instance = global %prg zeroinitializer

define void @foo(%foo* %0) {
entry:
  %this = alloca %foo*, align [filtered]
  store %foo* %0, %foo** %this, align [filtered]
  %bar_inst = getelementptr inbounds %foo, %foo* %0, i32 0, i32 0
  ret void
}

define void @bar(%bar* %0) {
entry:
  %this = alloca %bar*, align [filtered]
  store %bar* %0, %bar** %this, align [filtered]
  ret void
}

define void @prg(%prg* %0) {
entry:
  %foo_inst = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %bar_inst = getelementptr inbounds %foo, %foo* %foo_inst, i32 0, i32 0
  call void @bar(%bar* %bar_inst)
  ret void
}
