src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__function_call_with_same_name_as_return_type.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type {}

@prg_instance = global %prg zeroinitializer

define i32 @TIME() {
entry:
  %TIME = alloca i32, align [filtered]
  store i32 0, ptr %TIME, align [filtered]
  %TIME_ret = load i32, ptr %TIME, align [filtered]
  ret i32 %TIME_ret
}

define void @prg(ptr %0) {
entry:
  %call = call i32 @TIME()
  ret void
}
