src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__function_parameters_string.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: program

---
; ModuleID = 'main'
source_filename = "main"

%main_interface = type { [81 x i8], [81 x i8], [81 x i8] }
%read_string_interface = type { [81 x i8] }

@main_instance = global %main_interface zeroinitializer

define [81 x i8] @read_string(%read_string_interface* %0) {
entry:
  %to_read = getelementptr inbounds %read_string_interface, %read_string_interface* %0, i32 0, i32 0
  %read_string = alloca [81 x i8], align 1
  %1 = bitcast [81 x i8]* %read_string to i8*
  %2 = bitcast [81 x i8]* %to_read to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align 1 %1, i8* align 1 %2, i32 81, i1 false)
  %read_string_ret = load [81 x i8], [81 x i8]* %read_string, align 1
  ret [81 x i8] %read_string_ret
}

define void @main(%main_interface* %0) {
entry:
  %text1 = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 0
  %text2 = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 1
  %text3 = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 2
  %read_string_instance = alloca %read_string_interface, align 8
  br label %input

input:                                            ; preds = %entry
  %1 = getelementptr inbounds %read_string_interface, %read_string_interface* %read_string_instance, i32 0, i32 0
  store [81 x i8] c"abcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcabcab\00", [81 x i8]* %1, align 1
  br label %call

call:                                             ; preds = %input
  %call1 = call [81 x i8] @read_string(%read_string_interface* %read_string_instance)
  br label %output

output:                                           ; preds = %call
  br label %continue

continue:                                         ; preds = %output
  store [81 x i8] %call1, [81 x i8]* %text1, align 1
  %read_string_instance2 = alloca %read_string_interface, align 8
  br label %input3

input3:                                           ; preds = %continue
  %2 = getelementptr inbounds %read_string_interface, %read_string_interface* %read_string_instance2, i32 0, i32 0
  store [6 x i8] c"hello\00", [81 x i8]* %2, align 1
  br label %call4

call4:                                            ; preds = %input3
  %call7 = call [81 x i8] @read_string(%read_string_interface* %read_string_instance2)
  br label %output5

output5:                                          ; preds = %call4
  br label %continue6

continue6:                                        ; preds = %output5
  store [81 x i8] %call7, [81 x i8]* %text3, align 1
  ret void
}

; Function Attrs: argmemonly nofree nosync nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i32(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i32, i1 immarg) #0

attributes #0 = { argmemonly nofree nosync nounwind willreturn }

