src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__function_with_local_temp_var_initialization.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type {}

@prg_instance = global %prg zeroinitializer

define i32 @foo(i32 %0) {
entry:
  %foo = alloca i32, align [filtered]
  %in1 = alloca i32, align [filtered]
  store i32 %0, i32* %in1, align [filtered]
  %x = alloca i16, align [filtered]
  %y = alloca i16, align [filtered]
  %z = alloca i16, align [filtered]
  store i16 7, i16* %x, align [filtered]
  store i16 0, i16* %y, align [filtered]
  store i16 9, i16* %z, align [filtered]
  store i32 0, i32* %foo, align [filtered]
  %load_z = load i16, i16* %z, align [filtered]
  %1 = sext i16 %load_z to i32
  %tmpVar = add i32 %1, 1
  %2 = trunc i32 %tmpVar to i16
  store i16 %2, i16* %y, align [filtered]
  %foo_ret = load i32, i32* %foo, align [filtered]
  ret i32 %foo_ret
}

define void @prg(%prg* %0) {
entry:
  %call = call i32 @foo(i32 5)
  ret void
}
